# theoryOS

./: .gitignore  Cargo.toml  Makefile  README.md
kernel/: Cargo.toml  build.rs  limine.conf  linker-aarch64.ld  linker.ld
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs  panic.rs
kernel/src/acpi/: dsdt.rs  fadt.rs  madt.rs  mod.rs  power.rs  srat.rs  tables.rs
kernel/src/arch/: memory.rs  mod.rs  traits.rs
kernel/src/arch/aarch64/: entry.rs  mod.rs
kernel/src/audio/: hda.rs  mod.rs  pcspeaker.rs
kernel/src/boot/: info.rs  limine.rs  mod.rs
kernel/src/console/: mod.rs  serial.rs
kernel/src/fs/: embed.rs  fd.rs  mod.rs  pipe.rs  rootfs.rs
kernel/src/input/: mod.rs  mouse.rs  ps2.rs
kernel/src/ipc/: fifo.rs  futex.rs  mod.rs  mq.rs  pipe.rs  shm.rs  unix.rs  wait.rs
kernel/src/mm/: address_space.rs  aslr.rs  cow.rs  fault.rs  layout.rs  mod.rs  numa.rs  permissions.rs  vm.rs  vma.rs
kernel/src/net/: addr.rs  arp.rs  buffer.rs  device.rs  dhcp.rs  dns.rs  eth.rs  http.rs  icmp.rs  ipv4.rs  ipv6.rs  mod.rs  pci.rs  socket.rs  udp.rs  wifi.rs
kernel/src/proc/: exec.rs  id.rs  mod.rs  pcb.rs  table.rs  thread.rs
kernel/src/sched/: cfs.rs  idle.rs  mod.rs  rbtree.rs  runqueue.rs  timer.rs
kernel/src/security/: canary.rs  capability.rs  kpti.rs  mod.rs  seccomp.rs
kernel/src/signal/: delivery.rs  mod.rs  types.rs
kernel/src/sync/: mod.rs  mutex.rs
kernel/src/syscall/: errno.rs  mod.rs  nr.rs  table.rs  uaccess.rs
kernel/src/video/: apps.rs  browser.rs  desktop.rs  draw.rs  font.rs  framebuffer.rs  mod.rs  shell.rs  user_map.rs
(+74 files in other folders)
